2004-09-06  Zoltan Varga  <vargaz@freemail.hu>

	* main.c: Fix build && warnings.

2004-09-05  Jambunathan K  <kjambunathan@novell.com>
	* main.c (dump_cattrs_list): Newly carved out of dump_cattrs.
	
	Renamed cattrs_for_method() to more meaningful
	dump_cattrs_for_method_params()
	
	(dump_cattrs_for_method_params): Fixed so that ".param[]" gets
	dumped only when necessary. i.e., when a method parameter has
	either a default value and/or when it has a custom attribute.

2004-09-06  Zoltan Varga  <vargaz@freemail.hu>

	* get.c: Fix printing of unmanaged calling conventions.
	(get_constant): Fix warning.

2004-08-28  Jambunathan K  <kjambunathan@novell.com>
	* main.c: modified cattrs_for_method so that
	  emitting of ".param[] = ..." is complete.
	
	* get.c: Modified get_constant() so that
	  1. MONO_TYPE_CHAR now handles unicode characters
	  2. MONO_TYPE_I8 now emits int64(...)
	  3. MONO_TYPE_STRING emits a bytearray()

2004-08-18  Jambunathan K  <kjambunathan@novell.com>
	* get.c: Changed dis_stringify_param to emit [opt] for parameters
	  that are marked as Optional.

	* dump.c: Fixed dump_table_constant so that the parent field's
	  description is correctly displayed.

2004-08-08  Zoltan Varga  <vargaz@freemail.hu>

	* get.c (get_typespec): Append '*' to pointer types. Fixes #62331.

2004-08-03  Martin Baulig  <martin@ximian.com>

	* dump.c (method_dor_to_token): Moved to get.c and made public.

	* get.c (get_method_override): New public function.

	* main.c (dis_code): Added `.override' for override methods.

2004-08-02  Martin Baulig  <martin@ximian.com>

	* get.c (dis_stringify_object_with_class): Include our generic
	arguments in the method's class name.

	* main.c (dis_generic_param_and_constraints): Use the new
	constraints syntax.

2004-08-02  Martin Baulig  <martin@ximian.com>

	* dump.c (dump_stream_blob): Format this nicely.
	(dump_table_standalonesig): New public function.

	* main.c (dis_locals): If --show-tokens was requested, print the